# I3M-Developer-Docs

./: README.md
.github/workflows/: deploy.yml  test.yml
src/: SUMMARY.md  introduction.md
src/ai/: navmesh.md
src/beginning/: assets.md  editor_overview.md  hot_reloading.md  scripting.md
src/code/snippets/: Cargo.toml
src/code/snippets/src/editor/: prop_editors.rs
src/code/snippets/src/resource/: custom.rs
src/code/tutorials/fps/: Cargo.toml
src/code/tutorials/fps/editor/: Cargo.toml
src/code/tutorials/fps/editor/src/: main.rs
src/code/tutorials/platformer/: Cargo.toml
src/code/tutorials/platformer/editor/: Cargo.toml
src/code/tutorials/platformer/editor/src/: main.rs
src/code/tutorials/rpg/: Cargo.toml
src/code/tutorials/rpg/editor/: Cargo.toml
src/code/tutorials/rpg/editor/src/: main.rs
src/introduction/: introduction.md
src/rendering/: shaders.md
src/resources/: model.md
src/scene/: terrain_node.md
src/scripting/: plugin.md  script.md
src/serialization/: save.md
src/tutorials/fps/tutorial-1/: fps-tutorial.md
src/tutorials/fps/tutorial-2/: fps-tutorial-2.md
src/tutorials/fps/tutorial-3/: fps-tutorial-3.md
src/tutorials/platformer/: part1.md  part2.md
src/tutorials/rpg/tutorial-1/: tutorial-part-1.md
src/ui/: custom.md
