[package]
name = "i3m-book-code"
version = "0.1.0"
edition = "2021"

[dependencies]
i3m = { git = "https://github.com/IThreeM/I3M-Engine-Core", rev = "c865306042407c686cf53c83c7d9c2471a460b3e" }
fyroxed_base = { git = "https://github.com/IThreeM/I3M-Engine-Core", rev = "c865306042407c686cf53c83c7d9c2471a460b3e" }
strum = "0.26.0"
strum_macros = "0.26.0"