
[workspace]
members = ["editor", "executor", "executor-wasm", "executor-android", "game"]
resolver = "2"

[workspace.dependencies.i3m]
git = "ssh://git@github.com/IThreeM/I3M-Engine-Core.git"
rev = "ef943bc89a39d10325d16cb7ae4e05e0cf3ba7a0"

[workspace.dependencies.i3m_engine_core_base]
git = "ssh://git@github.com/IThreeM/I3M-Engine-Core.git"
rev = "ef943bc89a39d10325d16cb7ae4e05e0cf3ba7a0"

# Optimize the engine in debug builds, but leave project's code non-optimized.
# By using this technique, you can still debug you code, but engine will be fully
# optimized and debug builds won't be terribly slow. With this option, you can
# compile your game in debug mode, which is much faster (at least x3), than release.
[profile.dev.package."*"]
opt-level = 3
